--- a/project/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/project/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -9,96 +9,124 @@
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
-        android:id="@+id/linearLayout10"
+        android:id="@+id/linearLayout101"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
-        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+        <ImageView
+            android:id="@+id/ImageView1"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_chat"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/ImageView2"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:paddingBottom="0dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_explore"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/ImageView3"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:paddingBottom="0dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_person"
+            android:scaleType="fitCenter"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/fui_bgFacebook"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/chats"
+            android:textAllCaps="false"/>
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/discover"
+            android:textAllCaps="false"/>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/me"
+            android:textAllCaps="false"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@android:color/transparent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
         <ImageButton
             android:id="@+id/friendlist"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:paddingBottom="30dp"
-            android:background="@color/fui_bgFacebook"
-            app:srcCompat="@drawable/icon_chat"
-            android:scaleType="fitCenter"
+            android:paddingTop="2dp"
+            android:background="@android:color/transparent"
             android:onClick="toFriendlist" />
-
         <ImageButton
             android:id="@+id/channel"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:paddingBottom="30dp"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toChannel"
-            app:srcCompat="@drawable/icon_explore"
-            android:scaleType="fitCenter" />
-
+            android:paddingTop="2dp"
+            android:background="@android:color/transparent"
+            android:onClick="toChannel" />
         <ImageButton
             android:id="@+id/setting"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:paddingBottom="30dp"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toSetting"
-            app:srcCompat="@drawable/icon_person"
-            android:scaleType="fitCenter"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout11"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@color/fui_bgFacebook"
-        android:orientation="horizontal"
-        android:layout_marginTop="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@style/FirebaseUI.Button"
-            android:background="@color/fui_bgFacebook"
-            android:text="@string/chats"
-            android:textAllCaps="false"/>
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@style/FirebaseUI.Button"
-            android:background="@color/fui_bgFacebook"
-            android:text="@string/discover"
-            android:textAllCaps="false"/>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@style/FirebaseUI.Button"
-            android:background="@color/fui_bgFacebook"
-            android:text="@string/me"
-            android:textAllCaps="false"/>
+            android:paddingTop="2dp"
+            android:paddingBottom="0dp"
+            android:background="@android:color/transparent"
+            android:onClick="toSetting"/>
     </LinearLayout>
 
 </FrameLayout>
