--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -55,18 +55,6 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
             tools:layout_editor_absoluteY="250dp" />
 
-        <ImageButton
-            android:id="@+id/openFile"
-            style="@style/FirebaseUI.Button.AccountChooser"
-            android:layout_width="84dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="60dp"
-            android:background="@color/fui_bgFacebook"
-            android:gravity="center"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/icon_addphoto" />
-
         <ImageView
             android:id="@+id/image"
             android:layout_width="200dp"
@@ -88,6 +76,37 @@
         tools:ignore="OnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/fui_bgFacebook"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+
+        <ImageButton
+            android:id="@+id/openFile"
+            style="@style/FirebaseUI.Button.AccountChooser"
+            android:layout_width="79dp"
+            android:layout_height="52dp"
+            android:layout_gravity="center"
+            android:background="@color/fui_bgFacebook"
+            android:gravity="center"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_addphoto" />
+
+        <ImageButton
+            android:id="@+id/openMap"
+            android:layout_width="42dp"
+            android:layout_height="52dp"
+            android:layout_gravity="center"
+            android:background="@color/fui_bgFacebook"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_room" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
