--- a/project/app/src/main/res/layout/activity_chat_location.xml
+++ b/project/app/src/main/res/layout/activity_chat_location.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#3872AA"
+        android:background="@color/fui_bgFacebook"
         app:title="Camera"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="40dp"
         android:id="@+id/fragment_chat_location"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
     <RelativeLayout
@@ -60,34 +60,110 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/bottomBar"
+        android:id="@+id/linearLayout101"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#707070"
+        android:layout_height="40dp"
+        android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_editor_absoluteX="0dp">
-
-
-
-    <Button
-        android:onClick="onBackClick"
-        android:id="@+id/dropBtn"
-        style="android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="#707070"
-        android:text="Back" />
-
-    <Button
-        android:onClick="onSendClick"
-        android:id="@+id/reTakeBtn"
-        style="android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="#707070"
-        android:text="Send" />
+        app:layout_constraintStart_toStartOf="parent">
+        <ImageView
+            android:id="@+id/ImageView1"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_retake"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/ImageView2"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:paddingBottom="0dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_send2"
+            android:scaleType="fitCenter" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/fui_bgFacebook"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="Back"
+            android:textAllCaps="false"/>
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="Send"
+            android:textAllCaps="false"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@android:color/transparent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <ImageButton
+            android:id="@+id/dropBtn"
+            android:onClick="onBackClick"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:background="@android:color/transparent" />
+        <ImageButton
+            android:onClick="onSendClick"
+            android:id="@+id/reTakeBtn"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
